--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body" style="height: 450px;"><video width="500" height="300" controls="" style="height: 400px;width: 732px;">
-                                        <source src="C:\Users\mrari\Downloads\Python Intro.mp4" type="video/mp4">
+                                        <source src="/ref.mp4" type="video/mp4">
                                     </video></div>
                             </div>
                         </div>
